--- a/cuckoobird.cabal
+++ b/cuckoobird.cabal
@@ -31,10 +31,11 @@ executable cuckoobird
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+      CuckooLib
 
     -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
+    other-extensions: OverloadedStrings
     build-depends:    
         base ^>=4.16.0.0
       , mtl ^>=2.2.2
