--- a/cuckoobird.cabal
+++ b/cuckoobird.cabal
@@ -1,7 +1,6 @@
 cabal-version:      2.4
 name:               cuckoobird
 version:            0.1.0.0
-with-compiler:      ghc-9.2.1
 
 -- A short (one-line) description of the package.
 -- synopsis:
@@ -32,7 +31,22 @@ executable cuckoobird
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:
+    -- other-modules:
+
+    -- LANGUAGE extensions used by modules in this package.
+    other-extensions: OverloadedStrings
+    default-extensions: TupleSections
+    build-depends:    
+        base ^>=4.16.0.0
+      , mtl ^>=2.2.2
+      , random ^>=1.2.1.1
+      , cuckoobird-lib
+    hs-source-dirs:   app
+    default-language: Haskell2010
+
+library cuckoobird-lib
+    -- Modules included in this executable, other than Main.
+    exposed-modules:
         CuckooLib
       , CuckooNest
 
@@ -40,8 +54,8 @@ executable cuckoobird
     other-extensions: OverloadedStrings
     default-extensions: TupleSections
     build-depends:    
-        base >=4.0.0.0
+        base ^>=4.16.0.0
       , mtl ^>=2.2.2
       , random ^>=1.2.1.1
-    hs-source-dirs:   app
+    hs-source-dirs:   lib
     default-language: Haskell2010
