--- a/cuckoobird.cabal
+++ b/cuckoobird.cabal
@@ -37,10 +37,12 @@ executable cuckoobird
     other-extensions: OverloadedStrings
     default-extensions: TupleSections
     build-depends:    
-        base ^>=4.16.0.0
+        base >= 4.6 && < 5
       , mtl ^>=2.2.2
       , random ^>=1.2.1.1
+      , text ^>=1.2.5.0
       , cuckoobird-lib
+      , scotty >=0.12
     hs-source-dirs:   app
     default-language: Haskell2010
 
@@ -54,7 +56,7 @@ library cuckoobird-lib
     other-extensions: OverloadedStrings
     default-extensions: TupleSections
     build-depends:    
-        base ^>=4.16.0.0
+        base >= 4.6 && < 5
       , mtl ^>=2.2.2
       , random ^>=1.2.1.1
     hs-source-dirs:   lib
