--- a/cuckoobird.cabal
+++ b/cuckoobird.cabal
@@ -34,15 +34,16 @@ executable cuckoobird
     -- other-modules:
 
     -- LANGUAGE extensions used by modules in this package.
-    other-extensions: OverloadedStrings
-    default-extensions: TupleSections
+    default-extensions: TupleSections, OverloadedStrings
     build-depends:    
         base >= 4.6 && < 5
       , mtl ^>=2.2.2
+      , containers ^>= 0.6.5.1
       , random ^>=1.2.1.1
       , text ^>=1.2.5.0
       , cuckoobird-lib
       , scotty >=0.12
+      , aeson >= 2.1.0.0
     hs-source-dirs:   app
     default-language: Haskell2010
 
@@ -53,11 +54,11 @@ library cuckoobird-lib
       , CuckooNest
 
     -- LANGUAGE extensions used by modules in this package.
-    other-extensions: OverloadedStrings
-    default-extensions: TupleSections
+    default-extensions: TupleSections, OverloadedStrings
     build-depends:    
         base >= 4.6 && < 5
       , mtl ^>=2.2.2
       , random ^>=1.2.1.1
+      , aeson >= 2.1.0.0
     hs-source-dirs:   lib
     default-language: Haskell2010
