--- a/cuckoobird.cabal
+++ b/cuckoobird.cabal
@@ -60,5 +60,6 @@ library cuckoobird-lib
       , mtl ^>=2.2.2
       , random ^>=1.2.1.1
       , aeson >= 2.1.0.0
+      , time >= 1.11.1.1
     hs-source-dirs:   lib
     default-language: Haskell2010
