--- a/cuckoobird.cabal
+++ b/cuckoobird.cabal
@@ -52,7 +52,7 @@ library cuckoobird-lib
     exposed-modules:
         CuckooLib
       , CuckooNest
-
+      , Graph
     -- LANGUAGE extensions used by modules in this package.
     default-extensions: TupleSections, OverloadedStrings
     build-depends:    
@@ -61,5 +61,7 @@ library cuckoobird-lib
       , random ^>=1.2.1.1
       , aeson >= 2.1.0.0
       , time >= 1.11.1.1
+      , containers ^>= 0.6.5.1
+      , transformers ^>= 0.5.6.2
     hs-source-dirs:   lib
     default-language: Haskell2010
