--- a/cuckoobird.cabal
+++ b/cuckoobird.cabal
@@ -63,5 +63,6 @@ library cuckoobird-lib
       , time >= 1.11.1.1
       , containers ^>= 0.6.5.1
       , transformers ^>= 0.5.6.2
+      , text ^>=1.2.5.0
     hs-source-dirs:   lib
     default-language: Haskell2010
